# test-suite

./: .gitignore  CMakeLists.txt  README.md  test_conf.h.cmake
CMakeModules/: ConfigureMsvc3rdParty.cmake  FindCURL.cmake  FindGMP.cmake  FindMPFR.cmake  FindSimGear.cmake
build.x64/: .gitignore  README.test.x64.txt  build-me.bat  cmake-clean.txt  fi.bat  run-test.bat
nls-names/: nls-name2.txt  nls-names.htm  nls-names.txt
src/: MMFIODef.cpp  MMFIODef.h  byid.hpp  cf-log.cxx  cf-log.hxx  coremag.cxx  getline.c  getline.h  gettimeofday.c  gettimeofday.h  global.cxx  global.hxx  magvar.cxx  mmap1.cpp  mmap2.cpp  sg-maths.cxx  sg-maths.hxx  sprtf.cxx  strtoimax.cxx  test-area.cxx  test-area.hxx  test-array.c  test-array.h  test-bad-alloc.cxx  test-bad-alloc.hxx  test-codeset.c  test-codeset.h  test-color.cxx  test-color.hxx  test-console.cxx  test-deldir.cxx  test-deldir.hxx  test-fullpath.cxx  test-fullpath.hxx  test-http.cxx  test-http.hxx  test-intersect.cxx  test-intersect.hxx  test-knums.cxx  test-knums.hxx  (+44 more)
src/sockets/: nslookup.cxx  nslookup2.cxx
src/utf8/: bdi.html  bdi.txt  ps-utf-8.txt  rp.html  tempd  test-utf8.cxx  test-utf8.hxx
tester/: tester.cxx
